# Course_project_mail

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: settings.py  urls.py
mail/: admin.py  forms.py  models.py  service.py  urls.py  views.py
mail/management/commands/: send_mail.py
mail/migrations/: 0001_initial.py  0002_alter_attempts_options_alter_mailing_options_and_more.py
mail/templates/mail/: base.html  finished_mailing_info.html  mailing_attempts_list.html  mailing_confirm_delete.html  mailing_detail.html  mailing_form.html  mailing_list.html  main.html  massage_confirm_delete.html  massage_form.html  message_confirm_delete.html  message_detail.html  message_form.html  message_list.html  recipient_confirm_delete.html  recipient_detail.html  recipient_form.html  recipient_list.html  send_mail_result.html
mail/templates/mail/includes/: header.html
nginx/: Dockerfile
users/: admin.py  forms.py  models.py  urls.py  views.py
users/management/commands/: createmanager.py
users/migrations/: 0001_initial.py
users/templates/: password_reset_mail.html  user_detail.html  user_form.html  user_password_reset.html  user_password_set_new.html
users/templates/users/: customuser_list.html  login.html  register.html  user_form.html
